Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-03-23 (SVN):
    * utils/dcc/dcc.c: Use the DEF_SAVEGLOBAL macro instead of the magic
      number 1<<15 itself. Cleanup the code where the DEF_SAVEGLOBAL bit
      is cleared.

2012-03-23 (SVN):
    * libs/xdelta3/xdelta3.c (xd3_set_source): Fixed a variable set but
      not used warning.

2012-03-23 (SVN):
    * updated version date stamp to 2012-03-23.

2012-03-16 (SVN):
    * vid_mgl4.c: Disabled MGL's DirectDraw support by default, because
      it causes more trouble than it is actually worth. Can be enabled
      by the new -useddraw or -usedirectdraw command line switches, if
      required. Added back the 24 bpp checks to VID_InitFullDIB() in the
      low resolution modes search.
    * updated version date stamp to 2012-03-16.

2012-03-12 (SVN):
    * Moved the stufftext_frame global to client_static_t structure and
      adjusted CL_GetDemoMessage and CL_ParseServerMessage accordingly.

2012-03-12 (SVN):
    * windows codecs: updated libmpg123 to latest stable 1.13.6 version.
    * updated version date stamp to 2012-03-12.

2012-03-10 (SVN):
    * gl_vidnt.c, vid_dos.c,vid_mgl4.c,vid_sdl.c,vid_win.c, cl_parse.c:
      Don't use stat as a variable name.
    * updated version date stamp to 2012-03-10.

2012-03-08 (SVN):
    * glquake.h, gl_draw.c, gl_rsurf.c, net_chan.c: Fixed -Wsign-compare
      warnings.
    * updated version date stamp to 2012-03-08.

2012-03-03 (SVN):
    * viddef_t changes, #3/3: Now that vid.rowbytes is signed int, as it
      should be, changed vid_win.c to use bottom-up DIB.

2012-03-03 (SVN):
    * viddef_t changes, #2/3: Changed width, height, conwidth, conheight
      and most importantly the rowbytes member of the viddef_t structure
      from unsigned int to signed int.

2012-03-03 (SVN):
    * viddef_t changes, #1/3: Removed several int casts from earlier
      patches which are intended for silencing -Wsign-compare warnings.
